--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Шапка сайта  -->
     <header class="header">
-       <a class="logo" href="/index.html">Web<span class="logo-item">Studio</span></a>
+       <a class="logo" href="/index.html">Web<span class="logo-item-header">Studio</span></a>
     <nav>
         <ul class="nav-list">
             <li class="nav-item">
@@ -46,7 +46,7 @@
         </section>
         <!-- Секция Наши преимущества -->
         <section class="benefits">
-            <h2 hidden>Наши преимущества</h2>
+            <h2 class="visually-hidden">Наши преимущества</h2>
             <ul class="benefits-list">
                 <li class="benefits-item">
                     <h3 class="subtitle-benefits">Внимание к деталям</h3>
@@ -71,13 +71,13 @@
             <h2 class="space-title">Чем мы занимаемся</h2>
             <ul class="space-list">
                 <li class="space-item">
-                    <img src="./images/work/picture-1.jpg" alt="Рабочая атмосфера.Вариант 1" width="370" height="294">
+                    <img class="space-img" src="./images/work/picture-1.jpg" alt="Рабочая атмосфера.Вариант 1" width="370" height="294">
                 </li>
                 <li class="space-item">
-                    <img src="./images/work/picture-2.jpg" alt="Рабочая атмосфера.Вариант 2" width="370" height="294">
+                    <img class="space-img" src="./images/work/picture-2.jpg" alt="Рабочая атмосфера.Вариант 2" width="370" height="294">
                 </li>
                 <li class="space-item">
-                    <img src="./images/work/picture-3.jpg" alt="Рабочая атмосфера.Вариант 3" width="370" height="294">
+                    <img class="space-img" src="./images/work/picture-3.jpg" alt="Рабочая атмосфера.Вариант 3" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -86,22 +86,22 @@
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list">
                 <li class="team-item">
-                    <img src="./images/team/team-1.jpg" alt="фото Игоря Демьяненко" width="270" height="260">
+                    <img class="team-img" src="./images/team/team-1.jpg" alt="фото Игоря Демьяненко" width="270" height="260">
                     <h3 class="subtitle-team">Игорь Демьяненко</h3>
                     <p class="team-txt">Product Designer</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/team/team-2.jpg" alt="фото Ольги Репина" width="270" height="260">
+                    <img class="team-img" src="./images/team/team-2.jpg" alt="фото Ольги Репина" width="270" height="260">
                     <h3 class="subtitle-team">Ольга Репина</h3>
                     <p class="team-txt">Frontend Developer</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/team/team-3.jpg" alt="фото Николая Тарасова" width="270" height="260">
+                    <img class="team-img" src="./images/team/team-3.jpg" alt="фото Николая Тарасова" width="270" height="260">
                     <h3 class="subtitle-team">Николай Тарасов</h3>
                     <p class="team-txt">Marketing</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/team/team-4.jpg" alt="фото Михаила Ермакова" width="270" height="260">
+                    <img class="team-img" src="./images/team/team-4.jpg" alt="фото Михаила Ермакова" width="270" height="260">
                     <h3 class="subtitle-team">Михаил Ермаков</h3>
                     <p class="team-txt">UI Designer</p>
                 </li>
@@ -110,8 +110,8 @@
     </main>
     <!-- Подвал сайта (контакты) -->
     <footer class="footer">
-    <a class="logo" href="/index.html">Web<span class="logo-item">Studio</span></a>
-        <address>
+    <a class="logo" href="/index.html">Web<span class="logo-item-footer">Studio</span></a>
+        <address class="loc">
             г. Киев, пр-т Леси Украинки, 26
         <ul class="contacts-list">
             <li class="contacts-item">
