--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Шапка сайта  -->
     <header class="header">
-        <a class="logo" href="/index.html">Web<span class="logo-item">Studio</span></a>
+        <a class="logo" href="/index.html">Web<span class="logo-item-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">
@@ -39,78 +39,78 @@
     </header>
     <!-- Уникальный контент -->
     <main>
-        <h1 hidden>Портфолио</h1>
+        <h1 class="visually-hidden">Портфолио</h1>
         <!-- Фильтр страницы -->
-        <ul>
-            <li>
-                <button type="button">Все</button>
+        <ul class="filter-list">
+            <li class="filter-item">
+                <button class="filter-btn" type="button">Все</button>
             </li>
-            <li>
-                <button type="button">Веб-сайты</button>
+            <li class="filter-item">
+                <button class="filter-btn" type="button">Веб-сайты</button>
             </li>
-            <li>
-                <button type="button">Приложения</button>
+            <li class="filter-item">
+                <button class="filter-btn" type="button">Приложения</button>
             </li>
-            <li>
-                <button type="button">Дизайн</button>
+            <li class="filter-item">
+                <button class="filter-btn" type="button">Дизайн</button>
             </li>
-            <li>
-                <button type="button">Маркетинг</button>
+            <li class="filter-item">
+                <button class="filter-btn" type="button">Маркетинг</button>
             </li>
         </ul>
         <!-- Портфолио -->
-        <ul>
-            <li>
-                <img src="./images/portfolio/img-1.jpg" alt="изображение команды" width="370" height="294">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+        <ul class="portfolio-list">
+            <li class="portfolio-item">
+                <img class="portfolio-img" src="./images/portfolio/img-1.jpg" alt="изображение команды" width="370" height="294">
+                <h2 class="subtitle-portfolio">Технокряк</h2>
+                <p class="portfolio-txt">Веб-сайт</p>
             </li>
-            <li>
-                <img src="./images/portfolio/img-2.jpg" alt="изображение постера" width="370" height="294">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+            <li class="portfolio-item">
+                <img class="portfolio-img" src="./images/portfolio/img-2.jpg" alt="изображение постера" width="370" height="294">
+                <h2 class="subtitle-portfolio">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-txt">Дизайн</p>
             </li>
-            <li>
-                <img src="./images/portfolio/img-3.jpg" alt="логотип ресторана Seafood" width="370" height="294">
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p>
+            <li class="portfolio-item">
+                <img class="portfolio-img" src="./images/portfolio/img-3.jpg" alt="логотип ресторана Seafood" width="370" height="294">
+                <h2 class="subtitle-portfolio">Ресторан Seafood</h2>
+                <p class="portfolio-txt">Приложение</p>
             </li>
-            <li>
-                <img src="./images/portfolio/img-4.jpg" alt="изображение наушников" width="370" height="294">
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p>
+            <li class="portfolio-item">
+                <img class="portfolio-img" src="./images/portfolio/img-4.jpg" alt="изображение наушников" width="370" height="294">
+                <h2 class="subtitle-portfolio">Проект Prime</h2>
+                <p class="portfolio-txt">Маркетинг</p>
             </li>
-            <li>
-                <img src="./images/portfolio/img-5.jpg" alt="изображение подарочных коробок" width="370" height="294">
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p>
+            <li class="portfolio-item">
+                <img class="portfolio-img" src="./images/portfolio/img-5.jpg" alt="изображение подарочных коробок" width="370" height="294">
+                <h2 class="subtitle-portfolio">Проект Boxes</h2>
+                <p class="portfolio-txt">Приложение</p>
             </li>
-            <li>
-                <img src="./images/portfolio/img-6.jpg" alt="изображение монитора компьютера" width="370" height="294">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+            <li class="portfolio-item">
+                <img class="portfolio-img" src="./images/portfolio/img-6.jpg" alt="изображение монитора компьютера" width="370" height="294">
+                <h2 class="subtitle-portfolio">Inspiration has no Borders</h2>
+                <p class="portfolio-txt">Веб-сайт</p>
             </li>
-            <li>
-                <img src="./images/portfolio/img-7.jpg" alt="изображение книги" width="370" height="294">
-                <h2>Издание Limited Edition</h2>
-                <p>Дизайн</p>
+            <li class="portfolio-item">
+                <img class="portfolio-img" src="./images/portfolio/img-7.jpg" alt="изображение книги" width="370" height="294">
+                <h2 class="subtitle-portfolio">Издание Limited Edition</h2>
+                <p class="portfolio-txt">Дизайн</p>
             </li>
-            <li>
-                <img src="./images/portfolio/img-8.jpg" alt="изображение бирки" width="370" height="294">
-                <h2>Проект LAB</h2>
-                <p>Маркетинг</p>
+            <li class="portfolio-item">
+                <img class="portfolio-img" src="./images/portfolio/img-8.jpg" alt="изображение бирки" width="370" height="294">
+                <h2 class="subtitle-portfolio">Проект LAB</h2>
+                <p class="portfolio-txt">Маркетинг</p>
             </li>
-            <li>
-                <img src="./images/portfolio/img-9.jpg" alt="изображение ноутбука" width="370" height="294">
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
+            <li class="portfolio-item">
+                <img class="portfolio-img" src="./images/portfolio/img-9.jpg" alt="изображение ноутбука" width="370" height="294">
+                <h2 class="subtitle-portfolio">Growing Business</h2>
+                <p class="portfolio-txt">Приложение</p>
             </li>
         </ul>
     </main>
     <!-- Подвал сайта (контакты) -->
     <footer class="footer">
-        <a class="logo" href="/index.html">Web<span class="logo-item">Studio</span></a>
-        <address>
+        <a class="logo" href="/index.html">Web<span class="logo-item-footer">Studio</span></a>
+        <address   address class="loc">
             г. Киев, пр-т Леси Украинки, 26
             <ul class="contacts-list">
                 <li class="contacts-item">
