--- a/portfolio.html
+++ b/portfolio.html
@@ -16,19 +16,19 @@
     <header class="header">
         <a class="logo" href="/index.html">Web<span class="logo-item-header">Studio</span></a>
         <nav>
-            <ul class="nav-list">
+            <ul class="nav-list list">
                 <li class="nav-item">
                     <a class="nav-link" href="/index.html">Студия</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/portfolio.html">Портфолио</a>
+                    <a class="current-link" href="/portfolio.html">Портфолио</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="контакты">Контакты</a>
+                    <a class="nav-link" href="#contacts">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul class="nav-list-contacts">
+        <ul class="nav-list-contacts list">
             <li class="nav-item-contacts">
                 <a class="nav-link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
@@ -39,9 +39,10 @@
     </header>
     <!-- Уникальный контент -->
     <main>
+        <section class="portfolio">
         <h1 class="visually-hidden">Портфолио</h1>
         <!-- Фильтр страницы -->
-        <ul class="filter-list">
+        <ul class="filter-list list">
             <li class="filter-item">
                 <button class="filter-btn" type="button">Все</button>
             </li>
@@ -59,60 +60,79 @@
             </li>
         </ul>
         <!-- Портфолио -->
-        <ul class="portfolio-list">
+        <ul class="portfolio-list list">
             <li class="portfolio-item">
-                <img class="portfolio-img" src="./images/portfolio/img-1.jpg" alt="изображение команды" width="370" height="294">
-                <h2 class="subtitle-portfolio">Технокряк</h2>
-                <p class="portfolio-txt">Веб-сайт</p>
+                <a class="portfolio-link" href="">
+                    <img class="portfolio-img" src="./images/portfolio/img-1.jpg" alt="изображение команды" width="370" height="294">
+                    <h2 class="subtitle-portfolio">Технокряк</h2>
+                    <p class="portfolio-txt">Веб-сайт</p>
+                </a>
             </li>
             <li class="portfolio-item">
-                <img class="portfolio-img" src="./images/portfolio/img-2.jpg" alt="изображение постера" width="370" height="294">
-                <h2 class="subtitle-portfolio">Постер New Orlean vs Golden Star</h2>
-                <p class="portfolio-txt">Дизайн</p>
+                <a class="portfolio-link" href="">
+                    <img class="portfolio-img" src="./images/portfolio/img-2.jpg" alt="изображение постера" width="370" height="294">
+                    <h2 class="subtitle-portfolio">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-txt">Дизайн</p>
+                </a>
             </li>
             <li class="portfolio-item">
-                <img class="portfolio-img" src="./images/portfolio/img-3.jpg" alt="логотип ресторана Seafood" width="370" height="294">
-                <h2 class="subtitle-portfolio">Ресторан Seafood</h2>
-                <p class="portfolio-txt">Приложение</p>
+                <a class="portfolio-link" href="">
+                    <img class="portfolio-img" src="./images/portfolio/img-3.jpg" alt="логотип ресторана Seafood" width="370" height="294">
+                    <h2 class="subtitle-portfolio">Ресторан Seafood</h2>
+                        <p class="portfolio-txt">Приложение</p>
+                </a>
             </li>
             <li class="portfolio-item">
-                <img class="portfolio-img" src="./images/portfolio/img-4.jpg" alt="изображение наушников" width="370" height="294">
-                <h2 class="subtitle-portfolio">Проект Prime</h2>
-                <p class="portfolio-txt">Маркетинг</p>
+                <a class="portfolio-link" href="">
+                    <img class="portfolio-img" src="./images/portfolio/img-4.jpg" alt="изображение наушников" width="370" height="294">
+                    <h2 class="subtitle-portfolio">Проект Prime</h2>
+                    <p class="portfolio-txt">Маркетинг</p>
+                </a>
             </li>
             <li class="portfolio-item">
-                <img class="portfolio-img" src="./images/portfolio/img-5.jpg" alt="изображение подарочных коробок" width="370" height="294">
-                <h2 class="subtitle-portfolio">Проект Boxes</h2>
-                <p class="portfolio-txt">Приложение</p>
+                <a class="portfolio-link" href="">
+                    <img class="portfolio-img" src="./images/portfolio/img-5.jpg" alt="изображение подарочных коробок" width="370" height="294">
+                    <h2 class="subtitle-portfolio">Проект Boxes</h2>
+                    <p class="portfolio-txt">Приложение</p>
+                </a>
             </li>
             <li class="portfolio-item">
-                <img class="portfolio-img" src="./images/portfolio/img-6.jpg" alt="изображение монитора компьютера" width="370" height="294">
-                <h2 class="subtitle-portfolio">Inspiration has no Borders</h2>
-                <p class="portfolio-txt">Веб-сайт</p>
+                <a class="portfolio-link" href="">
+                    <img class="portfolio-img" src="./images/portfolio/img-6.jpg" alt="изображение монитора компьютера" width="370" height="294">
+                    <h2 class="subtitle-portfolio">Inspiration has no Borders</h2>
+                    <p class="portfolio-txt">Веб-сайт</p>
+                </a>
             </li>
             <li class="portfolio-item">
-                <img class="portfolio-img" src="./images/portfolio/img-7.jpg" alt="изображение книги" width="370" height="294">
-                <h2 class="subtitle-portfolio">Издание Limited Edition</h2>
-                <p class="portfolio-txt">Дизайн</p>
+                <a class="portfolio-link" href="">
+                    <img class="portfolio-img" src="./images/portfolio/img-7.jpg" alt="изображение книги" width="370" height="294">
+                    <h2 class="subtitle-portfolio">Издание Limited Edition</h2>
+                    <p class="portfolio-txt">Дизайн</p>
+                </a>
             </li>
             <li class="portfolio-item">
-                <img class="portfolio-img" src="./images/portfolio/img-8.jpg" alt="изображение бирки" width="370" height="294">
-                <h2 class="subtitle-portfolio">Проект LAB</h2>
-                <p class="portfolio-txt">Маркетинг</p>
+                <a class="portfolio-link" href="">
+                    <img class="portfolio-img" src="./images/portfolio/img-8.jpg" alt="изображение бирки" width="370" height="294">
+                    <h2 class="subtitle-portfolio">Проект LAB</h2>
+                    <p class="portfolio-txt">Маркетинг</p>
+                </a>
             </li>
             <li class="portfolio-item">
-                <img class="portfolio-img" src="./images/portfolio/img-9.jpg" alt="изображение ноутбука" width="370" height="294">
-                <h2 class="subtitle-portfolio">Growing Business</h2>
-                <p class="portfolio-txt">Приложение</p>
+                <a class="portfolio-link" href="">
+                    <img class="portfolio-img" src="./images/portfolio/img-9.jpg" alt="изображение ноутбука" width="370" height="294">
+                    <h2 class="subtitle-portfolio">Growing Business</h2>
+                    <p class="portfolio-txt">Приложение</p>
+                </a>
             </li>
         </ul>
+        </section>
     </main>
     <!-- Подвал сайта (контакты) -->
     <footer class="footer">
         <a class="logo" href="/index.html">Web<span class="logo-item-footer">Studio</span></a>
-        <address   address class="loc">
+        <address   address class="loc" id="contacts">
             г. Киев, пр-т Леси Украинки, 26
-            <ul class="contacts-list">
+            <ul class="contacts-list list">
                 <li class="contacts-item">
                     <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
                 </li>
