--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <header class="header">
        <a class="logo" href="/index.html">Web<span class="logo-item-header">Studio</span></a>
     <nav>
-        <ul class="nav-list">
+        <ul class="nav-list list">
             <li class="nav-item">
-                <a class="nav-link" href="/index.html">Студия</a>
+                <a class="current-link" href="/index.html">Студия</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/portfolio.html">Портфолио</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="контакты">Контакты</a>
+                <a class="nav-link" href="#contacts">Контакты</a>
             </li>
         </ul>
     </nav>
-    <ul class="nav-list-contacts">
+    <ul class="nav-list-contacts list">
         <li class="nav-item-contacts">
             <a class="nav-link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -47,7 +47,7 @@
         <!-- Секция Наши преимущества -->
         <section class="benefits">
             <h2 class="visually-hidden">Наши преимущества</h2>
-            <ul class="benefits-list">
+            <ul class="benefits-list list">
                 <li class="benefits-item">
                     <h3 class="subtitle-benefits">Внимание к деталям</h3>
                     <p class="benefits-txt">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -69,7 +69,7 @@
         <!-- Секция Род деятельности -->
         <section class="space"> 
             <h2 class="space-title">Чем мы занимаемся</h2>
-            <ul class="space-list">
+            <ul class="space-list list">
                 <li class="space-item">
                     <img class="space-img" src="./images/work/picture-1.jpg" alt="Рабочая атмосфера.Вариант 1" width="370" height="294">
                 </li>
@@ -84,7 +84,7 @@
         <!-- Секция Наша команда -->
         <section class="team">
             <h2 class="team-title">Наша команда</h2>
-            <ul class="team-list">
+            <ul class="team-list list">
                 <li class="team-item">
                     <img class="team-img" src="./images/team/team-1.jpg" alt="фото Игоря Демьяненко" width="270" height="260">
                     <h3 class="subtitle-team">Игорь Демьяненко</h3>
@@ -111,9 +111,9 @@
     <!-- Подвал сайта (контакты) -->
     <footer class="footer">
     <a class="logo" href="/index.html">Web<span class="logo-item-footer">Studio</span></a>
-        <address class="loc">
+        <address class="loc" id="contacts">
             г. Киев, пр-т Леси Украинки, 26
-        <ul class="contacts-list">
+        <ul class="contacts-list list">
             <li class="contacts-item">
                 <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
             </li>
