--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <nav>
         <ul class="nav-list list">
             <li class="nav-item">
-                <a class="current-link" href="/index.html">Студия</a>
+                <a class="current-link" href="./index.html">Студия</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/portfolio.html">Портфолио</a>
+                <a class="nav-link" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#contacts">Контакты</a>
