--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Шапка сайта  -->
     <header class="header">
-        <a class="logo" href="./index.html">Web<span class="logo-item-header">Studio</span></a>
+        <a class="logo" href="/index.html">Web<span class="logo-item-header">Studio</span></a>
         <nav>
             <ul class="nav-list list">
                 <li class="nav-item">
